feat: Integrate image cropping and add quality enhancers
Adds the `react-image-crop` library to enable users to select and crop portions of images.
Introduces a predefined list of prompt enhancers for various image quality settings, allowing users to easily improve the output of the Gemini model.
Updates the UI components to accommodate the new cropping functionality and prompt enhancement options.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gemini Image Editor</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://esm.sh/react-image-crop@11.0.5/dist/ReactCrop.css" />
   <script type="importmap">
 {
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
+    "react-image-crop": "https://esm.sh/react-image-crop@11.0.5"
   }
 }
 </script>
